--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-    .navbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #333;
-      overflow: hidden;
-    }
-    .navbar a {
-      float: left;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    .navbar a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-    section {
-      padding: 20px;
-    }
-    footer {
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 10px 0;
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-    }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #333;
+  overflow: hidden;
+}
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+section {
+  padding: 20px;
+}
+footer {
+  background-color: #f2f2f2;
+  text-align: center;
+  padding: 5px 0; /* Reduce padding */
+  position: fixed; /* Make footer fixed */
+  bottom: 0;
+  width: 100%;
+}
 
 /* Center the title section of the introduction section */
 #introduction h2:first-of-type {
@@ -39,18 +39,14 @@
 }
 
 /* About Us and What Routes Do We Cover sections side by side */
-#introduction h2:nth-of-type(2),
-#introduction h2:nth-of-type(3) {
-  display: inline-block;
-  width: 45%;
-  vertical-align: top;
-  margin: 2.5%;
+#introduction {
+  display: flex;
+  justify-content: space-between;
 }
 
+#introduction h2:nth-of-type(2),
+#introduction h2:nth-of-type(3),
 #introduction p:nth-of-type(2),
 #introduction p:nth-of-type(3) {
-  display: inline-block;
   width: 45%;
-  vertical-align: top;
-  margin: 2.5%;
 }
